--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "^0.59.0-rc.3"
+    "react-native": "^0.59.0-rc.3",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-navigation": "^3.3.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.7",
     "@types/react-native": "^0.57.38",
+    "@types/react-navigation": "^3.0.5",
     "@types/react-test-renderer": "^16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
