--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.7",
     "@types/react-native": "^0.57.38",
@@ -23,8 +25,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "24.3.1",
+    "babel-jest": "^24.5.0",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -34,10 +35,10 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "24.3.1",
+    "jest": "^24.5.0",
     "metro-react-native-babel-preset": "0.53.0",
     "prettier-eslint-cli": "^4.7.1",
-    "react-test-renderer": "16.6.3",
+    "react-test-renderer": "^16.8.4",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
   },
@@ -46,7 +47,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testMatch": [ "**/__tests__/**/*.(jsx|tsx)" ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
