--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start --max-old-space-size=4000",
     "test": "jest",
     "tsc": "tsc",
-    "lint": "eslint src/** --fix",
+    "lint": "eslint src/**.* --fix",
     "format": "prettier \"src/**/*.*(tsx|ts|js)\" --write"
   },
   "dependencies": {
@@ -25,19 +25,19 @@
     "@types/react-test-renderer": "^16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "eslint": "^5.15.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
-    "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.5.0",
     "metro-react-native-babel-preset": "0.53.0",
-    "prettier-cli": "^0.1.0",
+    "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.4",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
