--- a/.eslintrc
+++ b/.eslintrc
@@ -15,10 +15,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "@typescript-eslint/interface-name-prefix": ["error", "always"],
+    "@typescript-eslint/prefer-interface": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "react/prop-types": "off",
-    "no-unused-vars": "off",
-    "@typescript-eslint/class-name-casing": "error"
+    "react/prop-types": "off"
   }
 }
