--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "^0.59.0-rc.3",
+    "react-native-camera": "^2.1.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-navigation": "^3.3.2"
   },
